--- a/tradeify_ws/src/main/resources/ValidationMessages_tr.properties
+++ b/tradeify_ws/src/main/resources/ValidationMessages_tr.properties
@@ -1,5 +1,11 @@
-tradeify.constraints.email.NotNull.message = Eposta bo\u015F olamaz
+tradeify.constraints.email.NotNull.message = E-posta bo\u015F olamaz
 tradeify.constraints.email.Pattern.message = \u015Eifrenizde en az 1 b\u00fcy\u00fck harf, 1 k\u00fc\u00e7\u00fck harf ve 1 say\u0131 olmak zorundad\u0131r
 tradeify.constraint.email.UniqueEmail.message = Bu eposta kullan\u0131l\u0131yor
 tradeify.constraint.FileType.message = Desteklenmeyen dosya tipi. Sadece {types} dosyalar\u0131 kullan\u0131labilir
-tradeify.constraint.email.Valid.message = Lütfen bir e-posta adresi giriniz
+tradeify.constraint.email.Valid.message = L\u00fctfen bir e-posta adresi giriniz
+tradeify.constraint.phone.Valid.message = Telefon numaras\u0131 11 haneli olmal\u0131d\u0131r
+tradeify.constraint.phone.Pattern.message = Yaln\u0131zca numerik de\u011Ferler giriniz
+tradeify.constraint.date.Past.message = Geçmi\u015F bir tarih olmal\u0131d\u0131r
+tradeify.constraint.gender.NotNull.message = L\u00fctfen bir cinsiyet seçin
+tradeify.constraint.name.Valid.message = Ad sadece harf veya bo\u015Fluk i\u00e7ermelidir
+tradeify.constraint.surname.Valid.message = Soyad sadece harf veya bo\u015Fluk i\u00e7ermelidir
