--- a/tradeify_ws/src/main/resources/ValidationMessages_tr.properties
+++ b/tradeify_ws/src/main/resources/ValidationMessages_tr.properties
@@ -1,6 +1,7 @@
 tradeify.constraints.email.NotNull.message = E-posta bo\u015F olamaz
 tradeify.constraints.email.Pattern.message = \u015Eifrenizde en az 1 b\u00fcy\u00fck harf, 1 k\u00fc\u00e7\u00fck harf ve 1 say\u0131 olmak zorundad\u0131r
 tradeify.constraint.email.UniqueEmail.message = Bu eposta kullan\u0131l\u0131yor
+tradeify.constraint.phone.UniquePhone.message = Bu telefon ba\u015Fka bir hesaba ait
 tradeify.constraint.FileType.message = Desteklenmeyen dosya tipi. Sadece {types} dosyalar\u0131 kullan\u0131labilir
 tradeify.constraint.email.Valid.message = L\u00fctfen bir e-posta adresi giriniz
 tradeify.constraint.phone.Valid.message = Telefon numaras\u0131 11 haneli olmal\u0131d\u0131r
