--- a/tradeify_ws/src/main/resources/ValidationMessages_tr.properties
+++ b/tradeify_ws/src/main/resources/ValidationMessages_tr.properties
@@ -11,3 +11,5 @@ tradeify.constraint.gender.NotNull.message = L\u00fctfen bir cinsiyet seçin
 tradeify.constraint.name.Valid.message = Ad sadece harf veya bo\u015Fluk i\u00e7ermelidir
 tradeify.constraint.surname.Valid.message = Soyad sadece harf veya bo\u015Fluk i\u00e7ermelidir
 tradeify.constraints.password.Control.message = \u015Eifreniz yanl\u0131\u015F
+tradeify.constraints.price.Control.message = Fiyat tam say\u0131 veya ondal\u0131kl\u0131 say\u0131 olmal\u0131d\u0131r
+tradeify.constraint.FileType.message = Desteklenmeyen dosya tipi. Sadece {types} dosyalar\u0131 kullan\u0131labilir
