--- a/tradeify_ws/src/main/resources/ValidationMessages_tr.properties
+++ b/tradeify_ws/src/main/resources/ValidationMessages_tr.properties
@@ -13,3 +13,8 @@ tradeify.constraint.surname.Valid.message = Soyad sadece harf veya bo\u015Fluk i
 tradeify.constraints.password.Control.message = \u015Eifreniz yanl\u0131\u015F
 tradeify.constraints.price.Control.message = Fiyat tam say\u0131 veya ondal\u0131kl\u0131 say\u0131 olmal\u0131d\u0131r
 tradeify.constraint.FileType.message = Desteklenmeyen dosya tipi. Sadece {types} dosyalar\u0131 kullan\u0131labilir
+tradeify.constraint.fullname.Valid.message  = Ad soyad yaln\u0131zca harf i\u00e7ermelidir
+tradeify.constraint.card.Valid.message = Kart numaras\u0131 16 haneli olmal\u0131d\u0131r
+tradeify.constraint.card.pattern.Valid.message = Kart numaras\u0131 sadece say\u0131 i\u00e7ermelidir
+tradeify.constraint.cvc.Valid.message = CVC/CVV 3 haneli olmal\u0131d\u0131r
+tradeify.constraint.cvc.pattern.Valid.message =  CVC/CVV sadece say\u0131 i\u00e7ermelidir
